구구단 예제 추가

--- a/week_05.ipynb
+++ b/week_05.ipynb
@@ -194,46 +194,416 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b8f2bc70-cb1e-4a17-a7a6-a431d6ce1b4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "몇 단을 출력할까요? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== 3단 ==\n",
+      "3 X 1 = 3 \n",
+      "3 X 2 = 6 \n",
+      "3 X 3 = 9 \n",
+      "3 X 4 = 12 \n",
+      "3 X 5 = 15 \n",
+      "3 X 6 = 18 \n",
+      "3 X 7 = 21 \n",
+      "3 X 8 = 24 \n",
+      "3 X 9 = 27 \n"
+     ]
+    }
+   ],
    "source": [
-    "# 1"
+    "# 1\n",
+    "dan = int(input('몇 단을 출력할까요?'))\n",
+    "print(f\"== {dan}단 ==\")\n",
+    "for i in range(1,10):\n",
+    "    print(f\"{dan} X {i} = {dan * i} \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "743091ea-d49a-4c44-b49b-cb764a3bb65d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "1단부터 몇 단까지 출력할까요?\n",
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== 1단 ==\n",
+      "1 * 1 = 1 \n",
+      "1 * 2 = 2 \n",
+      "1 * 3 = 3 \n",
+      "1 * 4 = 4 \n",
+      "1 * 5 = 5 \n",
+      "1 * 6 = 6 \n",
+      "1 * 7 = 7 \n",
+      "1 * 8 = 8 \n",
+      "1 * 9 = 9 \n",
+      "\n",
+      "== 2단 ==\n",
+      "2 * 1 = 2 \n",
+      "2 * 2 = 4 \n",
+      "2 * 3 = 6 \n",
+      "2 * 4 = 8 \n",
+      "2 * 5 = 10 \n",
+      "2 * 6 = 12 \n",
+      "2 * 7 = 14 \n",
+      "2 * 8 = 16 \n",
+      "2 * 9 = 18 \n",
+      "\n",
+      "== 3단 ==\n",
+      "3 * 1 = 3 \n",
+      "3 * 2 = 6 \n",
+      "3 * 3 = 9 \n",
+      "3 * 4 = 12 \n",
+      "3 * 5 = 15 \n",
+      "3 * 6 = 18 \n",
+      "3 * 7 = 21 \n",
+      "3 * 8 = 24 \n",
+      "3 * 9 = 27 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2"
+    "# 2\n",
+    "dan = int(input('1단부터 몇 단까지 출력할까요?\\n'))\n",
+    "for i in range(1,dan+1):\n",
+    "    print(f\"== {i}단 ==\")\n",
+    "    for j in range(1,10):\n",
+    "        print(f\"{i} X {j} = {i * j} \")\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "757ab271-020c-44cb-a022-97c830975130",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작 단을 입력하세요\n",
+      " 10\n",
+      "끝 단을 입력하세요\n",
+      " 12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "단이 9를 넘어갈 수 없습니다. 다시 입력하세요\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작 단을 입력하세요\n",
+      " 7\n",
+      "끝 단을 입력하세요\n",
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시작 단이 끝 단보다 큽니다. 다시 입력하세요\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작 단을 입력하세요\n",
+      " 1\n",
+      "끝 단을 입력하세요\n",
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== 1단 ==\n",
+      "1 X 1 = 1 \n",
+      "1 X 2 = 2 \n",
+      "1 X 3 = 3 \n",
+      "1 X 4 = 4 \n",
+      "1 X 5 = 5 \n",
+      "1 X 6 = 6 \n",
+      "1 X 7 = 7 \n",
+      "1 X 8 = 8 \n",
+      "1 X 9 = 9 \n",
+      "\n",
+      "== 2단 ==\n",
+      "2 X 1 = 2 \n",
+      "2 X 2 = 4 \n",
+      "2 X 3 = 6 \n",
+      "2 X 4 = 8 \n",
+      "2 X 5 = 10 \n",
+      "2 X 6 = 12 \n",
+      "2 X 7 = 14 \n",
+      "2 X 8 = 16 \n",
+      "2 X 9 = 18 \n",
+      "\n",
+      "== 3단 ==\n",
+      "3 X 1 = 3 \n",
+      "3 X 2 = 6 \n",
+      "3 X 3 = 9 \n",
+      "3 X 4 = 12 \n",
+      "3 X 5 = 15 \n",
+      "3 X 6 = 18 \n",
+      "3 X 7 = 21 \n",
+      "3 X 8 = 24 \n",
+      "3 X 9 = 27 \n",
+      "\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3"
+    "# 3\n",
+    "while True:\n",
+    "    startDan = int(input('시작 단을 입력하세요\\n'))\n",
+    "    endDan = int(input('끝 단을 입력하세요\\n'))\n",
+    "    if startDan > endDan:\n",
+    "        print('시작 단이 끝 단보다 큽니다. 다시 입력하세요')\n",
+    "        continue\n",
+    "    elif startDan > 9 or endDan > 9:\n",
+    "        print('단이 9를 넘어갈 수 없습니다. 다시 입력하세요')\n",
+    "    else:\n",
+    "        for i in range(startDan,endDan+1):\n",
+    "            print(f\"== {i}단 ==\")\n",
+    "            for j in range(1,10):\n",
+    "                print(f\"{i} X {j} = {i * j} \")\n",
+    "            print()\n",
+    "        print('종료합니다.')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6bc4e9c6-ab4f-4107-bbc5-940b9247e507",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 메뉴 ===\n",
+      "\n",
+      "    메뉴에서 구구단의 종류를 선택하세요.\n",
+      "    4를 입력하면 종료됩니다.\n",
+      "    \n",
+      "    1) n\n",
+      "    2) 1-n 까지\n",
+      "    3) n-m 까지\n",
+      "    4) 프로그램 종료\n",
+      "    \n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "메뉴 번호를 입력하세요: 3\n",
+      "시작 단수를 입력하세요: 1\n",
+      "끝 단수를 입력하세요: 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1단 부터 4단을 선택했습니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "맞으시면 1, 아니면 아무 숫자를 입력주세요. 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 메뉴 ===\n",
+      "\n",
+      "    메뉴에서 구구단의 종류를 선택하세요.\n",
+      "    4를 입력하면 종료됩니다.\n",
+      "    \n",
+      "    1) n\n",
+      "    2) 1-n 까지\n",
+      "    3) n-m 까지\n",
+      "    4) 프로그램 종료\n",
+      "    \n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "메뉴 번호를 입력하세요: 3\n",
+      "시작 단수를 입력하세요: 1\n",
+      "끝 단수를 입력하세요: 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1단 부터 4단을 선택했습니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "맞으시면 1, 아니면 아무 숫자를 입력주세요. 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== 1단 ==\n",
+      "1 X 1 = 1 \n",
+      "1 X 2 = 2 \n",
+      "1 X 3 = 3 \n",
+      "1 X 4 = 4 \n",
+      "1 X 5 = 5 \n",
+      "1 X 6 = 6 \n",
+      "1 X 7 = 7 \n",
+      "1 X 8 = 8 \n",
+      "1 X 9 = 9 \n",
+      "\n",
+      "== 2단 ==\n",
+      "2 X 1 = 2 \n",
+      "2 X 2 = 4 \n",
+      "2 X 3 = 6 \n",
+      "2 X 4 = 8 \n",
+      "2 X 5 = 10 \n",
+      "2 X 6 = 12 \n",
+      "2 X 7 = 14 \n",
+      "2 X 8 = 16 \n",
+      "2 X 9 = 18 \n",
+      "\n",
+      "== 3단 ==\n",
+      "3 X 1 = 3 \n",
+      "3 X 2 = 6 \n",
+      "3 X 3 = 9 \n",
+      "3 X 4 = 12 \n",
+      "3 X 5 = 15 \n",
+      "3 X 6 = 18 \n",
+      "3 X 7 = 21 \n",
+      "3 X 8 = 24 \n",
+      "3 X 9 = 27 \n",
+      "\n",
+      "== 4단 ==\n",
+      "4 X 1 = 4 \n",
+      "4 X 2 = 8 \n",
+      "4 X 3 = 12 \n",
+      "4 X 4 = 16 \n",
+      "4 X 5 = 20 \n",
+      "4 X 6 = 24 \n",
+      "4 X 7 = 28 \n",
+      "4 X 8 = 32 \n",
+      "4 X 9 = 36 \n",
+      "\n",
+      "프로그램을 종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4\n",
+    "while True:\n",
+    "    print(\"=== 메뉴 ===\")\n",
+    "    print('''\n",
+    "    메뉴에서 구구단의 종류를 선택하세요.\n",
+    "    4를 입력하면 종료됩니다.\n",
+    "    \n",
+    "    1) n\n",
+    "    2) 1-n 까지\n",
+    "    3) n-m 까지\n",
+    "    4) 프로그램 종료\n",
+    "    \n",
+    "    ''')\n",
+    "    menu = int(input('메뉴 번호를 입력하세요:'))\n",
+    "    \n",
+    "    if menu == 1:\n",
+    "        startDan = int(input('몇 단을 출력할까요?:'))\n",
+    "        endDan = startDan\n",
+    "    elif menu == 2:\n",
+    "        startDan = 1\n",
+    "        endDan = int(input('1단부터 몇 단까지 출력할까요?:'))\n",
+    "    elif menu == 3:\n",
+    "        startDan = int(input('시작 단수를 입력하세요:'))\n",
+    "        endDan = int(input('끝 단수를 입력하세요:'))\n",
+    "    elif menu == 4:\n",
+    "        print(\"종료합니다.\")\n",
+    "        break\n",
+    "    \n",
+    "    if startDan > endDan:\n",
+    "        print('시작 단이 끝 단보다 큽니다. 다시 입력하세요. \\n')\n",
+    "        continue\n",
+    "        \n",
+    "    if startDan > 9 or endDan > 9:\n",
+    "        print('단이 9를 넘어갈 수 없습니다. 다시 입력하세요 \\n')\n",
+    "        continue\n",
+    "    \n",
+    "    print(f\"{startDan}단 부터 {endDan}단을 선택했습니다.\")\n",
+    "    choice = int(input(\"맞으시면 1, 아니면 아무 숫자를 입력해주세요.\"))\n",
+    "    if choice == 1:\n",
+    "        for i in range(startDan,endDan+1):\n",
+    "            print(f\"== {i}단 ==\")\n",
+    "            for j in range(1,10):\n",
+    "                print(f\"{i} X {j} = {i * j} \")\n",
+    "            print()\n",
+    "        print(\"프로그램을 종료합니다.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc4e9c6-ab4f-4107-bbc5-940b9247e507",
+   "id": "037d86f5-9d9a-480e-9827-7b3ad63923fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4\n",
-    "#피드백: break랑 continue가 넘 많다.\n",
-    "#완벽하게 해서 올리기\n",
+    "# 수업 시간에 풀었던 풀이 (4)\n",
     "while True:\n",
-    "    menu = int(input(\"메뉴를 선택하세요\")) #메뉴를 알 수 없음\n",
+    "    menu = int(input(\"메뉴를 선택하세요\"))\n",
     "    if menu not in [1,2,3]:\n",
     "        print(\"menu를 다시 입력하세요\")\n",
     "        continue\n",
