--- a/week_13.ipynb
+++ b/week_13.ipynb
@@ -436,6 +436,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d2204d6-f0d4-4960-8522-cfa6ed84a04e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습!\n",
+    "# 내부함수가 외부함수의 인자를 가져올때, 그 인자가 함수인 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "22d7be5a-48a3-47a8-98fa-8655dcd3271b",
    "metadata": {},
    "outputs": [],
@@ -503,7 +514,10 @@
     "    return inner\n",
     "\n",
     "x = square(add)\n",
-    "x(4,5)"
+    "x(4,5)\n",
+    "\n",
+    "# 이 풀이는 뭔가 이상한게, square에 넣은 add가 활용되고 있는 느낌이 없음..\n",
+    "# square에 add는 넣었는데 inner를 타서 없어진 느낌이랄까?"
    ]
   },
   {
@@ -566,10 +580,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "63afa90a-a9af-4b86-98b4-de69273ab1c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 정답\n",
     "\n",
@@ -577,16 +602,13 @@
     "      return a + b\n",
     "\n",
     "def square(func): # 인자에는 다른거 안넣고 func이 들어가야 함\n",
-    "    def inner(a,b): \n",
+    "    def inner(a,b): # inner말고 다른 이름 해도 되네!\n",
     "        result = func(a,b)\n",
     "        return result * result\n",
     "    return inner\n",
     "\n",
-    "\n",
-    "@square\n",
-    "def plus(a,b): \n",
-    "      return a + b\n",
-    "plus(4,5)"
+    "x = square(add)\n",
+    "x(4,5)"
    ]
   },
   {
@@ -653,7 +675,7 @@
     "#### [scope | 범위]\n",
     "- 전역: global\n",
     "- 지역: local\n",
-    "- nonlocal"
+    "- nonlocal: 내부함수 때문에, nonlocal이라는 범위가 더 늘어나게 됨"
    ]
   },
   {
@@ -703,12 +725,12 @@
     }
    ],
    "source": [
-    "a = 3\n",
+    "a = 3 # global\n",
     "def outer(c):\n",
-    "    b = 5\n",
+    "    b = 5 # local\n",
     "    def inner():\n",
-    "        # 여기까지 c는 9였지만 다음 행에서 바뀜\n",
-    "        c = 999\n",
+    "        # 여기까지 c=9지만, 다음 행에서 바뀜\n",
+    "        c = 999 # nonlocal\n",
     "        return c\n",
     "    return inner()\n",
     "\n",
@@ -717,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "d5c6887a-362b-4868-a24c-51068c32b372",
    "metadata": {},
    "outputs": [
@@ -728,44 +750,46 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26376/4261861085.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mouter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26376/4261861085.py\u001b[0m in \u001b[0;36mouter\u001b[1;34m(c)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mc\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mouter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26376/4261861085.py\u001b[0m in \u001b[0;36minner\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mc\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29524/794863297.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mouter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# 오류가 나는 이유?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29524/794863297.py\u001b[0m in \u001b[0;36mouter\u001b[1;34m(c)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mc\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mouter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29524/794863297.py\u001b[0m in \u001b[0;36minner\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mc\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'c' referenced before assignment"
      ]
     }
    ],
    "source": [
     "a = 3\n",
-    "def outer(c):\n",
+    "def outer(c): # c = 9\n",
     "    b = 5\n",
     "    def inner():\n",
+    "        # c = 9\n",
     "        c += 1\n",
     "        return c\n",
     "    return inner()\n",
     "\n",
-    "outer(9)"
+    "outer(9)\n",
+    "\n",
+    "# 오류가 나는 이유?\n",
+    "# \"nonlocal에서 변수 c를 할당한 것이 없다\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "4a5257d6-e04f-40b7-bcb6-e304f286a1e6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "a = 3\n",
+    "c = 3\n",
     "def outer(c):\n",
     "    b = 5\n",
     "    def inner():\n",
@@ -774,7 +798,8 @@
     "        return c\n",
     "    return inner()\n",
     "\n",
-    "outer(9)"
+    "print(outer(9))\n",
+    "print(c)\n"
    ]
   },
   {
@@ -792,20 +817,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "37964df3-a22d-471f-a269-bef2be1b8f05",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'getDiffer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26376/2671750343.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m@\u001b[0m\u001b[0mgetDiffer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcheck_speed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspeed\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlimit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mspeed\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mlimit\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'getDiffer' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'5만큼 초과하셨습니다.'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -817,12 +841,14 @@
     "        return True\n",
     "    return False\n",
     "\n",
+    "\n",
     "def get_differ(func):\n",
     "    def inner(speed,limit):\n",
     "        if func(speed,limit):\n",
     "            differ = speed - limit\n",
     "            return f'{differ}만큼 초과하셨습니다.'\n",
     "    return inner\n",
+    "\n",
     "\n",
     "check_speed(10,5)"
    ]
@@ -834,8 +860,48 @@
    "source": [
     "틀린이유\n",
     "1. 데코레이터로 실행한다는 것을 이해 못했다.\n",
+    "-> 내부함수 위에다가 데코레이터를 넣으면, 실행할때 해당 내부함수로 실행할 수 있다.\n",
+    "\n",
     "2. 데코레이터를 언제 왜 어떻게 사용하는지 잘 이해 못했다\n",
+    "-> 외부함수의 코드를 재사용할 수 있다. (데코레이터 함수를 재사용할 수 있다.)\n",
+    "\n",
     "3. 데코레이터의 위치가 아래에 있어야 함을 몰랐다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3633c02b-82e0-43aa-9a21-a45377fe6dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10만큼 초과했습니다.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 다시 풀이\n",
+    "\n",
+    "def get_differ(funct):\n",
+    "    def inner(speed,limit):\n",
+    "        if funct(speed,limit):\n",
+    "            return f'{speed - limit}만큼 초과했습니다.'\n",
+    "        else:\n",
+    "            return \"초과하지 않았습니다.\"\n",
+    "    return inner\n",
+    "\n",
+    "@get_differ\n",
+    "def check_speed(speed,limit):\n",
+    "    return speed > limit\n",
+    "\n",
+    "\n",
+    "check_speed(20,10)\n"
    ]
   },
   {
@@ -1348,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "c652e1ec-fd16-4441-bc48-00efa3bf11bf",
    "metadata": {},
    "outputs": [
