--- a/week_14.ipynb
+++ b/week_14.ipynb
@@ -28,7 +28,7 @@
    "id": "a2e5f5c0-f0a4-4bf8-98d1-f66bf3b58dd4",
    "metadata": {},
    "source": [
-    "#### 파일 열기\n",
+    "#### [파일 열기]\n",
     "- open(파일명, 모드)\n",
     "- 모드\n",
     "    - r: read (default)    \n",
@@ -81,7 +81,7 @@
    "id": "76655c1a-8fea-4e0e-873c-c8a82fd26b8c",
    "metadata": {},
    "source": [
-    "#### 파일 읽기\n",
+    "#### [파일 읽기]\n",
     "- read(): 전체를 하나의 str 로 가져옴\n",
     "    - 포인터\n",
     "- readline(): 한 줄만 str\n",
@@ -235,7 +235,7 @@
    "id": "2905c618-eb4c-4d6e-a085-729a9a2b3ac2",
    "metadata": {},
    "source": [
-    "#### 파일 닫기\n",
+    "#### [파일 닫기]\n",
     "- 파일을 항상 열면 즉시 닫아야함\n",
     "- 파일 여는 즉시 닫기\n",
     "- 자원 해제라고 부름\n",
@@ -322,7 +322,7 @@
    "id": "4b0e8139-06b1-4613-8283-ee219ddf0b07",
    "metadata": {},
    "source": [
-    "#### 경로가 달라질 때\n",
+    "#### [경로가 달라질 때]\n",
     "- . : 현재 경로\n",
     "- .. : 상위 경로"
    ]
@@ -354,7 +354,7 @@
    "id": "e450c720-9c67-4e1e-ae95-bbd8eccc3837",
    "metadata": {},
    "source": [
-    "#### 쓰기\n",
+    "#### [쓰기]\n",
     "- 인코딩 유의"
    ]
   },
@@ -402,7 +402,7 @@
    "id": "eae3ea8b-d8ee-496d-8769-e1997f91bab6",
    "metadata": {},
    "source": [
-    "#### folder 만들어서 추가하는 방법\n",
+    "#### [folder 만들어서 추가하는 방법]\n",
     "    - 폴더를 만들어야함\n",
     "        import os\n",
     "        os.mkdir('abc')\n",
@@ -444,6 +444,7 @@
     "if not os.isdir(path):\n",
     "    os.mkdir(path)\n",
     "\n",
+    "# dir_name = './abc/test2_txt'\n",
     "dir_name = os.path.join(path,'test2.txt')\n",
     "\n",
     "# 재확인\n",
@@ -459,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "목표: 하위 폴더 어쩌구\n",
+    "목표: 하위 폴더 \n",
     "패쓰가 있는지 확인\n",
     "없으면 만듦\n",
     "패스랑 조인을 해서 전체 디렉토리 파일명 설정\n",
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "1633902e-496a-4823-80e4-ed526d8706a9",
    "metadata": {},
    "outputs": [
@@ -515,12 +516,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20700/1564067322.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# 폴더 생성\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6112/1434375990.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# 폴더 생성\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: module 'os' has no attribute 'isdir'"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
     "path = 'new_folder'\n",
     "\n",
     "# 폴더 생성\n",
@@ -592,15 +595,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "373e5523-34d9-4223-a0c6-aa5d4efe4f82",
+   "cell_type": "markdown",
+   "id": "8eecdc80-2cc7-443f-b0d4-b86098c54cce",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### pickle\n",
+    "#### [pickle]\n",
     "- 객체를 파일로 저장하는 기능 제공\n",
-    "- "
+    "- 리스트든, 객체든 다 저장해서 불러오기 가능"
    ]
   },
   {
